--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-<title>Link shortening</title>
+<title>Shortly by Pratik</title>
 <meta name="title" content="Link shortening">
 <meta name="description" content="just a click to shorten your URL ">
 
